<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zeuscar_robot_package</name>
  <version>0.1.0</version>
  <description>ZeusCar robot control package for Arduino communication</description>
  <maintainer email="shinf0330@gmail.com">Murasan201</maintainer>
  <license>MIT</license>

  <!-- 実行時依存関係 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- テスト依存関係 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
